tests/baselines/reference/nonMergedOverloads(strict=true).errors.txt
nonMergedOverloads.ts(1,5): error TS2395: Individual declarations in merged declaration 'f' must be all exported or all local.
nonMergedOverloads.ts(3,17): error TS2395: Individual declarations in merged declaration 'f' must be all exported or all local.
nonMergedOverloads.ts(3,17): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
nonMergedOverloads.ts(4,17): error TS2395: Individual declarations in merged declaration 'f' must be all exported or all local.


==== nonMergedOverloads.ts (4 errors) ====
    var f = 10;
        ~
!!! error TS2395: Individual declarations in merged declaration 'f' must be all exported or all local.
    
    export function f();
                    ~
!!! error TS2395: Individual declarations in merged declaration 'f' must be all exported or all local.
                    ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
    export function f() {
                    ~
!!! error TS2395: Individual declarations in merged declaration 'f' must be all exported or all local.
    }